--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,9 @@ Jinja2==2.8
 MarkupSafe==0.23
 Werkzeug==0.11.13
 
+#Server
+gunicorn
 
 #Tools
-python-decouple
+python-decouple==3.0
+Flask-Script==2.0.5
