--- a/app.yaml
+++ b/app.yaml
@@ -3,3 +3,9 @@ env: flex
 runtime: python
 runtime_config:
   python_version: 3
+manual_scaling:
+  instances: 1
+resources:
+  cpu: .5
+  memory_gb: 0.5
+  disk_size_gb: 10
