--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 ENVIRONMENT=Production or DEV
+SECRET_KEY=Random string for cookies and session hashing
 PROJECT_ID=Google cloud project id
-
+WTF_CSRF_SECRET_KEY=Random String for CSRF token hashing
