Add flask user, mail and debug toolbar ext, ext configs and update requirentements file

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,21 @@
+#Flask Configs
 ENVIRONMENT=Production or DEV
 SECRET_KEY=Random string for cookies and session hashing
+
+#Google cloud Configs
 PROJECT_ID=Google cloud project id
+
+#Flask WTform configs
 WTF_CSRF_SECRET_KEY=Random String for CSRF token hashing
+
+# Flask Mail Configs
+MAIL_USERNAME=Smtp server username
+MAIL_PASSWORD=Smtp server user password
+MAIL_DEFAULT_SENDER= Who's sending noreply@example.com
+MAIL_SERVER=Smtp Dns or IP smtp.example.net
+MAIL_PORT=Smtp server port
+MAIL_USE_SSL=True or False to use ssl
+MAIL_USE_TLS=True ot False to use Tls
+
+# Flask User Configs
+USER_APP_NAME=App name, use to identify your app in emails
