Add new index for post in index.yaml

--- a/index.yaml
+++ b/index.yaml
@@ -5,3 +5,9 @@ indexes:
    - name: post_id
    - name: updated
      direction: desc
+
+ - kind: Post
+   properties:
+   - name: updated
+     direction: desc
+   - name: title
